# inky_yt_capture

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  env_loader.py  logger.py
src/server/: image_server.py
